--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
-body {
+*{
+    margin: 0;
+    padding: 0;
+}
+.background {
+    height: 100vh;
+    width: 100vw;
     background: linear-gradient(to left, #171717, #000);
 }
